tests/reject/tatomic.nim
discard """
  file: "tatomic.nim"
  line: 7
  errormsg: "identifier expected, but found \'atomic\'"
"""
var 
  atomic: int
  
echo atomic



